--- a/src/components/navbar/navbar.module.css
+++ b/src/components/navbar/navbar.module.css
@@ -3,7 +3,8 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    margin: 0 50px 0 50px;
+    padding: 0 50px 0 50px;
+    margin-bottom: 60px;
 }
 
 .logo{
