--- a/src/components/footer/footer.module.css
+++ b/src/components/footer/footer.module.css
@@ -1,12 +1,15 @@
 .container {
     width: 100%;
-    height: 170px;  
+    height: 200px;  
+    margin-top: 80px;
     padding: 0 50px 0 50px;
     display: flex;
     align-items: center;
     justify-content: space-between;
     color: white;
     background-color: black;
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
 }
 
 .logo {
@@ -27,7 +30,7 @@
     display: flex;
     flex-direction: column;
     margin-top: 15px;
-    gap: 10px;
+    gap: 15px;
     color: #f4f4f4;
-    text-decoration: underline;
+    text-decoration: none;
 }
