--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -14,6 +14,7 @@
 body {
     background-color: var(--bg);
     color: var(--text);
+    overflow-y: scroll;
 }
 
 a{
@@ -22,8 +23,7 @@ a{
 }
 
 .container{
-    width: 1536px;
-    margin: auto;
+    width: calc(100vw - 17px);
     min-height: 100vh;
     display: flex;
     flex-direction: column;
