--- a/src/components/navbar/navbar.module.css
+++ b/src/components/navbar/navbar.module.css
@@ -1,4 +1,5 @@
 .container{
+    background-color: black;
     height: 80px;
     display: flex;
     align-items: center;
@@ -10,4 +11,12 @@
 .logo{
     font-size: 25px;
     font-weight: 600;
+    color: white;
+}
+
+.links{
+    gap: 40px;
+    display: flex;
+    align-items: center;
+    color: white;
 }
