--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -15,6 +15,7 @@ body {
     background-color: var(--bg);
     color: var(--text);
     overflow-y: scroll;
+    padding-top: 60px;
 }
 
 a{
@@ -23,9 +24,10 @@ a{
 }
 
 .container{
-    width: calc(100vw - 17px);
+    width: 100%;
     min-height: 100vh;
     display: flex;
+    align-self: center;
     flex-direction: column;
     justify-content: space-between;
 }
