--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -1,16 +1,35 @@
-.main{
-    width: 100%;
-    padding: 30px 50px 30px 50px;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
+/* CSS */
+.button {
+  --b: 3px;
+  --s: .45em;
+  --color: White;
+  
+  padding: calc(.5em + var(--s)) calc(.9em + var(--s));
+  color: var(--color);
+  --_p: var(--s);
+  background:
+    conic-gradient(from 90deg at var(--b) var(--b),#0000 90deg,var(--color) 0)
+    var(--_p) var(--_p)/calc(100% - var(--b) - 2*var(--_p)) calc(100% - var(--b) - 2*var(--_p));
+  transition: .3s linear, color 0s, background-color 0s;
+  outline: var(--b) solid #0000;
+  outline-offset: .6em;
+  font-size: 16px;
+
+  border: 0;
+
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
 }
 
-.popular_blogs{
-    margin-bottom: 48px;
+.button:hover,
+.button:focus-visible{
+  --_p: 0px;
+  outline-color: var(--color);
+  outline-offset: .05em;
 }
 
-.popular_blogs .content{
-    margin-top: 24px;
+.button:active {
+  background: var(--color);
+  color: #fff;
 }
